          of module/script files inside each release files, so we now record the
          abstract of each module/script, and mentions/references of modules &
          scripts in POD of modules/scripts. Note that size of index (index.db)
          now increases from ~60M to ~250M.

        - This version forces a full reindex.

        - New subcommands: contents, scripts, mentions.


0.66    2016-02-07 (PERLANCAR)

        - [Bugfix] file should be indexed by (cpanid,name) not (name) because
          PAUSE allows two authors to have the same filename.

        - Bump database schema version to v7 due to the above fix.

        - [Incompatible change] deps: Change default --include-core to 1.

        - copy_*, extract_*: Check that release file exists.


0.65    2016-01-23 (PERLANCAR)

	- [Bugfix] deps: Dependency to unindexed modules was not shown.

	- Use authors/00whois.xml (produced by e.g. OrePAN) when
	  authors/01mailrc.txt.gz does not exist.

	- [doc] Update mini CPAN current size.

	- mods: Complete namespace.


0.64    2016-01-16 (PERLANCAR)

        - Adjust so we can be used like a daemon.

        - [Bugfix] mod2dist: Used wrong database result field.

        - [Bugfix] releases: Used wrong result field.

        - [doc] Update information about mini CPAN current size.


0.63    2016-01-06 (PERLANCAR)

	- [Bugfix] Propagate error from _update_index().

	- Add safety code to bail out when indexer_version is newer than
	  current version, remove old code.


0.62    2016-01-04 (PERLANCAR)

	- mods: Allow specifying multiple namespaces.


0.61    2015-12-31 (PERLANCAR)

        - No functional changes.

        - [build] Rebuild with updated PWR:DumpPerinciCmdLineScript (0.04) which
          lets us avoid extraneous subcommands from being included in the
          bin/lcpan's POD.


0.60    2015-12-25 (PERLANCAR) (It's *this* Christmas!)

	- Replace --exact-match with the more general --query-type to be